--- a/ReduxSimpleStarter/style/style.css
+++ b/ReduxSimpleStarter/style/style.css
@@ -114,3 +114,15 @@ body .modal {
 	padding: 20px;
 	display: block;
 }
+
+/* Style for middleware example */
+.user-list {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.card {
+	width: 30%;
+	min-width: 300px;
+}
