--- a/BlogExample/style/style.css
+++ b/BlogExample/style/style.css
@@ -1,60 +1,3 @@
-/* Style for youtube example */
-.search-bar {
-	margin: 20px;
-	text-align: center;
-}
-
-.search-bar input {
-	width: 75%;
-}
-
-.video-item img {
-	max-width: 64px;
-}
-
-.video-detail .details {
-	margin-top: 10px;
-	padding: 10px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-}
-
-.video-detail .details .title {
-	font-weight: bold;
-}
-
-.video-detail .details .description {
-	font-style: italic;
-}
-
-.list-group-item {
-	cursor: pointer;
-}
-
-.list-group-item:hover {
-	background-color: #eee;
-}
-
-
-/* Style for weather example */
-th, td {
-	vertical-align: middle !important;
-	text-align: center !important;
-}
-
-.input-group {
-	margin: 20px 0;
-}
-
-svg {
-	height: 150px;
-}
-
-td:first-of-type, td:first-of-type > div {
-	height: 200px;
-	width: 250px;
-}
-
 /* Style for blog example */
 form a {
 	margin-left: 5px;
@@ -113,4 +56,16 @@ body .modal {
 	outline: none;
 	padding: 20px;
 	display: block;
+}
+
+/* Style for middleware example */
+.user-list {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.card {
+	width: 30%;
+	min-width: 300px;
 }
